css ok sur homepage

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,9 +1,12 @@
-<h1>Welcome to the gossips page</h1>
+<h1>Welcome to the gossips</h1>
 <h2>See below the list of gossips : </h2>
-<p>(click on it to have more details)</p>
-<ul>
 <% @my_gossips.each_with_index do |gossip, i| %>
-<li>N°<%=i%> by <%= gossip.user.first_name %> <br>
-Title : <%= gossip.title %>...<%= link_to "see more", gossip_by_id_path(i)%></li>
+  <div class="card" style="width: 15em">
+    <img class="card-img-top" src="https://bit.ly/2J44t2M" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">N°<%=i%> by <%= gossip.user.first_name %> </h5>
+      <p class="card-text"><%= gossip.title %></p>
+      <a href="#" class="btn btn-primary"><%= link_to "see more", gossip_by_id_path(i)%></a>
+    </div>
+  </div>
 <% end %>
-</ul>
