--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to 'Team', team_path, :class => "nav-link"%>
+          <%= link_to 'Team', team_index_path, :class => "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to 'Contact', contact_path, :class => "nav-link" %>
+          <%= link_to 'Contact', contact_index_path, :class => "nav-link" %>
 
         </li>
         <li class="nav-item dropdown">
